# chokotto_home

./: Cargo.toml
chokotto_client/: Cargo.toml
chokotto_client/src/: main.rs
chokotto_server/: Cargo.toml
chokotto_server/src/: main.rs
