[package]
name = "chokotto_home_client"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.5.20", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["multipart", "stream"] }
url = "2.5.3"
