[package]
name = "chokotto_home_client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "choko"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
reqwest = { version = "0.12.9", features = ["multipart", "stream", "http3"] }
#reqwest = { path = "../../reqwest", features = ["multipart", "stream", "http3"] }
url = "2.5.3"
futures-util = "0.3.31"
