[package]
name = "chokotto_home_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
salvo = { version = "0.74.1", features = ["anyhow", "quinn"] }
dirs = "5.0.1"
local-ip-address = "0.6.3"
