[package]
name = "chokotto_home_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chokosaba"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
#salvo = { version = "0.74.1", features = ["anyhow", "quinn"] }
salvo = { path = "../../salvo/crates/salvo", features = ["anyhow", "quinn", "serve-static"] }
dirs = "5.0.1"
local-ip-address = "0.6.3"

[dev-dependencies]
regex = "1.11.1"
